samples/_failures_safe/1761169737_0cae51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20f79ba1.c: In function ‘main’:
./samples/SAFE/__tmp_20f79ba1.c:151:32: error: ‘BUFFER’ undeclared (first use in this function)
  151 |     unsigned char decompressed[BUFFER
      |                                ^~~~~~
./samples/SAFE/__tmp_20f79ba1.c:151:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_20f79ba1.c:151:38: error: expected ‘]’ at end of input
  151 |     unsigned char decompressed[BUFFER
      |                                      ^
      |                                      ]
./samples/SAFE/__tmp_20f79ba1.c:151:5: error: expected declaration or statement at end of input
  151 |     unsigned char decompressed[BUFFER
      |     ^~~~~~~~
